Re: #619 - stop img height overflow

--- a/portal2/src/main/webapp/themes/sass/src/search.scss
+++ b/portal2/src/main/webapp/themes/sass/src/search.scss
@@ -30,6 +30,7 @@
 
 #items img {
   max-height:		100%;
+  max-height:		140px;
   max-width:		100%;
   vertical-align:	middle;
 }
